LPD-90495 removes usage of JDK 21 method